feat(auth): refresh token routes & validations
