# docs/swagger.json
@@ -42,7 +42,7 @@
                 }
             }
         },
-        "/v1/auth/refresh": {
+        "/v1/auth/refresh/{token}": {
             "get": {
                 "description": "Refresh authorization token",
                 "consumes": [
@@ -55,6 +55,15 @@
                     "auth"
                 ],
                 "summary": "Refresh",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Refresh Token",
+                        "name": "token",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
